--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -26,6 +26,8 @@
       href: tutorial-restore-files.md
     - name: Een back-up maken van SQL Server op virtuele Azure-machine
       href: tutorial-sql-backup.md
+    - name: Een back-up maken van Azure Files-bestandsshares
+      href: tutorial-backup-azure-files.md
     - name: Back-up maken van Windows Server
       href: tutorial-backup-windows-server-to-azure.md
     - name: Bestanden terugzetten naar Windows Server
