--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -494,9 +494,9 @@
       href: how-to-manage-database-account.md
     - name: Werken met Azure Cosmos DB-resources
       items:
-        - name: Met behulp van PowerShell
+        - name: PowerShell gebruiken
           href: manage-with-powershell.md
-        - name: Met behulp van Azure CLI
+        - name: Azure CLI gebruiken
           href: manage-with-cli.md
         - name: Met behulp van Resource Manager-sjablonen
           href: manage-sql-with-resource-manager.md
@@ -624,10 +624,12 @@
         - name: Toepassingslogboeken bijhouden met Logische apps
           href: /azure/logic-apps/logic-apps-scenario-error-and-exception-handling
           maintainContext: true
-    - name: Controleren
+    - name: Bewaken met metrische gegevens
       items:
-        - name: Bewaken met metrische gegevens
+        - name: Metrische gegevens weergeven vanuit Cosmos DB-account
           href: use-metrics.md
+        - name: Metrische gegevens weergeven vanuit Azure Monitor
+          href: cosmos-db-azure-monitor-metrics.md
         - name: SLA's bewaken
           href: monitor-accounts.md
     - name: Lokaal ontwikkelen
