--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -119,8 +119,8 @@
           href: ephemeral-os-disks.md
     - name: Netwerken
       href: network-overview.md
-    - name: Toepassingen automatisch schalen
-      href: autoscale.md
+    - name: Schaalsets
+      href: ../../virtual-machine-scale-sets/overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
     - name: Automatisering van infrastructuur
       href: infrastructure-automation.md
     - name: Beveiliging en beleid
@@ -411,8 +411,6 @@
           href: freebsd-pf-nat.md
         - name: Databases
           items:
-            - name: MySQL
-              href: mysql-install.md
             - name: MySQL in SUSE
               href: mysql-on-opensuse.md
             - name: MongoDB
