--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -118,8 +118,8 @@
           href: ephemeral-os-disks.md
     - name: Netwerken
       href: network-overview.md
-    - name: Toepassingen automatisch schalen
-      href: autoscale.md
+    - name: Schaalsets
+      href: ../../virtual-machine-scale-sets/overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
     - name: Automatisering van infrastructuur
       href: infrastructure-automation.md
     - name: Beveiliging en beleid
